added some stuff

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Undertale Wiki</title>
   </head>
   <body>
-    <img src="images/start-page-picture.png" alt="sorry but the picture doesent load :(">
+    <a href="/index.html">Home</a>
+    <a href="/test/test.html">placeholder</a>
+    <h1>Welcome to the Undertale wiki</h1>
+    <p>here you will learn everything that is to know about Undertale such as</p>
+    <ul>
+        <li>The storyline</li>
+        <li>All characters</li>
+        <li>Hidden secrets</li>
+        <li>Alternative routes</li>
+    </ul>
+    <img src="images/start-page-picture.png" alt="All undertale characters standing on text that reads undertale">
+    
   </body>
 </html>
