added more code

--- a/index.html
+++ b/index.html
@@ -3,19 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Undertale Wiki</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Roboto" rel="stylesheet">
   </head>
   <body>
     <a href="/index.html">Home</a>
-    <a href="/test/test.html">placeholder</a>
+    <a href="/Story/index.html">Story/Routes</a>
     <h1>Welcome to the Undertale wiki</h1>
-    <p>here you will learn everything that is to know about Undertale such as</p>
-    <ul>
+    <p id="UnderText">Here you will learn everything that is to know about Undertale such as</p>
+    <div class="ThingsInSiteContainer">
+      <ul class="ThingsInSite">
         <li>The storyline</li>
         <li>All characters</li>
         <li>Hidden secrets</li>
         <li>Alternative routes</li>
     </ul>
+    </div>
     <img src="images/start-page-picture.png" alt="All undertale characters standing on text that reads undertale">
-    
+    <h2>General info about undertale</h2>
+    <p>Undertale is a video game that was created and published by an indie developer called Toby Fox.
+      <br>
+      Toby Fox was responsible for scripting, designing and soundtrack and contains artworks from designer Temmie Chang and got 92/100 on Metacritics.
+      <br>
+      It was released on september 15th 2015. It was praised for its story, the characters, and the combat system by many game critics.
+      <br>
+      Undertale got selled over 1.7 million times and got nominated for awards such as game of the year.
+      <br>
+      The japanese studio 8-4 ported the game over to console: On the 15th of august 2017 Undertale got ported to the Playstation 4 and playstation vita
+      <br>
+      On the 18th of september 2018 it got ported to the Nintendo Switch and on march 16th it got ported to Xbox One and Xbox seriese x and series S
+    </p>
   </body>
 </html>
