--- a/Story/index.html
+++ b/Story/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Undertale Wiki</title>
+    <link href="/styles/style.css" rel="stylesheet">
+    <link href="https://fonts.google.com/specimen/Roboto" rel="stylesheet">
   </head>
   <body>
     <a href="/index.html">Home</a>
-    <a href="/test/test.html">placeholder</a>
-    
-    <h1>This is a test page</h1>
+    <a href="/Story/index.html">Story/Routes</a>
     
   </body>
 </html>
