added some javascript

--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
       <br>
       On the 18th of september 2018 it got ported to the Nintendo Switch and on march 16th it got ported to Xbox One and Xbox seriese x and series S
     </p>
+    <button id="userButton">change user</button>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
